[package]
name = "hyperpm"
version = "0.1.0"
edition = "2021"
description = "An optimized NPM package manager built on top of the NPM registry."
homepage = "https://hyperpm.vercel.app"
repository = "https://github.com/hyperpmrs/hyperpm"
license = "Apache-2.0"
authors = ["Voltaged <rusindanilo@gmail.com>"]
keywords = ["package manager", "npm", "nodejs", "registry"]
categories = ["command-line", "package manager"]

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3.31"
colored = "2.0"
indicatif = "0.17.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
assert_cmd = "2.0"

[features]
default = ["json"]
json = []

[profile.release]
opt-level = 3
lto = true